# a2a-rust

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DOGFOODING_AUDIT.md  GOVERNANCE.md  HARDENING_TRACKER.md  LESSONS.md  README.md  RELEASING.md  SECURITY.md  clippy.toml  codecov.yml  deny.toml  mutants.toml  rust-toolchain.toml
benches/: Cargo.toml  README.md
benches/benches/: advanced_scenarios.rs  backpressure.rs  concurrent_agents.rs  cross_language.rs  data_volume.rs  enterprise_scenarios.rs  error_paths.rs  memory_overhead.rs  production_scenarios.rs  protocol_overhead.rs  realistic_workloads.rs  task_lifecycle.rs  transport_throughput.rs
benches/cross_language/: canonical_agent_card.json  canonical_send_params.json
benches/dashboard/: template.html
benches/scripts/: compare_results.sh  cross_language_go.sh  cross_language_js.sh  cross_language_python.sh  extract_benchmark_json.py  generate_book_page.sh  generate_dashboard.sh  run_benchmarks.sh
benches/src/: executor.rs  fixtures.rs  lib.rs  server.rs
crates/a2a-client/: Cargo.toml  README.md  build.rs
crates/a2a-client/benches/: sse_parse.rs
crates/a2a-client/proto/: a2a.proto
crates/a2a-client/src/: auth.rs  builder.rs  client.rs  config.rs  discovery.rs  error.rs  interceptor.rs  lib.rs  retry.rs  tls.rs  trace.rs
crates/a2a-client/src/builder/: mod.rs  transport_factory.rs
crates/a2a-client/src/methods/: extended_card.rs  mod.rs  push_config.rs  send_message.rs  tasks.rs
crates/a2a-client/src/streaming/: event_stream.rs  mod.rs  sse_parser.rs
crates/a2a-client/src/transport/: grpc.rs  jsonrpc.rs  mod.rs  rest.rs  websocket.rs
crates/a2a-client/tests/: client_method_tests.rs  client_tests.rs  coverage_gap_tests.rs  discovery_tests.rs  extended_card_tests.rs  rest_streaming_tests.rs  sse_edge_case_tests.rs  tls_integration_tests.rs  ws_transport_tests.rs
crates/a2a-sdk/: Cargo.toml  README.md
crates/a2a-sdk/src/: lib.rs
crates/a2a-sdk/tests/: reexport_tests.rs
crates/a2a-server/: Cargo.toml  README.md  build.rs
crates/a2a-server/benches/: handler_bench.rs
crates/a2a-server/src/: builder.rs  call_context.rs  error.rs  executor.rs  executor_helpers.rs  handler.rs  interceptor.rs  lib.rs  metrics.rs  otel.rs  rate_limit.rs  request_context.rs  serve.rs  tenant_config.rs  tenant_resolver.rs  trace.rs
crates/a2a-server/src/agent_card/: caching.rs  dynamic_handler.rs  hot_reload.rs  mod.rs  static_handler.rs
crates/a2a-server/src/dispatch/: axum_adapter.rs  cors.rs  grpc.rs  jsonrpc.rs  mod.rs  rest.rs  websocket.rs
crates/a2a-server/src/handler/: event_processing.rs  helpers.rs  lifecycle.rs  limits.rs  messaging.rs  mod.rs  push_config.rs  shutdown.rs
crates/a2a-server/src/otel/: builder.rs  mod.rs  pipeline.rs
crates/a2a-server/src/push/: config_store.rs  mod.rs  postgres_config_store.rs  sender.rs  sqlite_config_store.rs  tenant_config_store.rs  tenant_postgres_config_store.rs  tenant_sqlite_config_store.rs
crates/a2a-server/src/store/: migration.rs  mod.rs  pg_migration.rs  postgres_store.rs  sqlite_store.rs  task_store.rs  tenant.rs  tenant_postgres_store.rs  tenant_sqlite_store.rs
crates/a2a-server/src/streaming/: event_queue.rs  mod.rs  sse.rs
crates/a2a-server/tests/: audit_tests.rs  axum_adapter_tests.rs  dispatch_edge_tests.rs  dispatch_rest_coverage.rs  dispatch_tests.rs  dynamic_handler_tests.rs  edge_case_tests.rs  event_processing_tests.rs  event_queue_tests.rs  grpc_dispatch_tests.rs  handler_tests.rs  hardening_tests.rs  interceptor_tests.rs  jsonrpc_dispatch_coverage_tests.rs  jsonrpc_edge_tests.rs  push_config_tests.rs  push_sender_tests.rs  rest_edge_tests.rs  send_sync_tests.rs  serve_tests.rs  sqlite_store_tests.rs  sse_format_tests.rs  state_validation_tests.rs  store_tests.rs  streaming_tests.rs  stress_tests.rs  tenant_sqlite_push_config_tests.rs  tenant_sqlite_store_tests.rs  tenant_store_tests.rs  validation_edge_tests.rs  websocket_tests.rs
crates/a2a-server/tests/audit_tests/: edge_cases.rs  lifecycle.rs  main.rs  public_api.rs  security_boundaries.rs
crates/a2a-server/tests/dispatch_tests/: hardening.rs  jsonrpc.rs  main.rs  rest.rs
crates/a2a-server/tests/edge_case_tests/: concurrency.rs  error_mapping.rs  event_queue.rs  handler_basics.rs  main.rs  store_and_eviction.rs  type_system.rs
crates/a2a-server/tests/event_processing_tests/: background_processor.rs  error_handling.rs  main.rs  state_transitions.rs  streaming_mode.rs  sync_mode.rs
crates/a2a-server/tests/handler_tests/: advanced.rs  agent_card.rs  main.rs  push_config.rs  send_message.rs  streaming.rs  task_operations.rs
crates/a2a-server/tests/hardening_tests/: builder.rs  concurrency.rs  event_queue.rs  interceptor_chain.rs  main.rs  push_config_store.rs  task_store.rs
crates/a2a-types/: Cargo.toml  README.md
crates/a2a-types/benches/: json_serde.rs
crates/a2a-types/src/: agent_card.rs  artifact.rs  error.rs  events.rs  extensions.rs  jsonrpc.rs  lib.rs  message.rs  params.rs  push.rs  responses.rs  security.rs  serde_helpers.rs  signing.rs  task.rs
crates/a2a-types/tests/: corpus_json.rs  coverage_gap_tests.rs  proptest_types.proptest-regressions  proptest_types.rs  serde_edge_cases.rs  signing_tests.rs  state_transition_tests.rs  tck_wire_format.rs
examples/agent-team/: Cargo.toml  DOGFOOD_REPORT.md  README.md
examples/agent-team/src/: cards.rs  helpers.rs  infrastructure.rs  main.rs
examples/agent-team/src/executors/: build_monitor.rs  mod.rs  (+3 more)
examples/echo-agent/: Cargo.toml  README.md
examples/echo-agent/src/: main.rs
examples/genai-agent/: Cargo.toml  README.md
examples/genai-agent/src/: main.rs
examples/multi-lang-team/: Cargo.toml  README.md
examples/multi-lang-team/src/: main.rs
examples/rig-agent/: Cargo.toml  README.md
examples/rig-agent/src/: main.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: json_deser.rs
tck/: Cargo.toml  README.md
tck/src/: main.rs  runner.rs
tck/src/tests/: agent_card.rs  errors.rs  helpers.rs  messaging.rs  mod.rs  push_config.rs  streaming.rs  task_ops.rs  wire_format.rs
(+150 files in other folders)
