# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F.

[workspace]
resolver = "2"
members = [
    "crates/a2a-types",
    "crates/a2a-client",
    "crates/a2a-server",
    "crates/a2a-sdk",
    "examples/echo-agent",
    "examples/agent-team",
    "examples/multi-lang-team",
    "examples/rig-agent",
    "examples/genai-agent",
    "tck",
]

[workspace.package]
edition      = "2021"
rust-version = "1.93"
license      = "Apache-2.0"
authors      = ["Tom F."]
repository   = "https://github.com/tomtom215/a2a-rust"
homepage     = "https://github.com/tomtom215/a2a-rust"
documentation = "https://docs.rs/a2a-protocol-sdk"
keywords     = ["a2a", "agent", "protocol", "sdk", "ai"]
categories   = ["network-programming", "web-programming", "api-bindings"]

[workspace.dependencies]
# Protocol types
serde      = { version = ">=1.0.200, <2", features = ["derive"] }
serde_json = { version = ">=1.0.115, <2" }

# Async runtime
tokio = { version = ">=1.38, <2", features = ["rt", "net", "io-util", "sync", "time", "macros"] }

# HTTP stack
hyper          = { version = ">=1.4, <2",   features = ["client", "server", "http1", "http2"] }
http-body-util = { version = ">=0.1, <0.2" }
hyper-util     = { version = ">=0.1.6, <0.2", features = ["client", "client-legacy", "http1", "http2", "tokio"] }

# IDs
uuid = { version = ">=1.8, <2", features = ["v4"] }

# Observability (optional)
tracing = { version = ">=0.1.40, <0.2" }

# gRPC (optional — behind `grpc` feature flag)
tonic        = { version = "0.12" }
prost        = { version = "0.13" }
tonic-build  = { version = "0.12" }
tokio-stream = { version = "0.1" }

# SQLite (optional — behind `sqlite` feature flag)
[workspace.dependencies.sqlx]
version = "0.8"
default-features = false
features = ["runtime-tokio", "sqlite"]

[workspace.dependencies.criterion]
version = "0.5"
features = ["html_reports"]

[profile.release]
panic         = "abort"
lto           = true
opt-level     = 3
codegen-units = 1
strip         = true
