# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F. <tomf@tomtomtech.net> (https://github.com/tomtom215)

[package]
name = "a2a-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
a2a-protocol-types = { path = "../crates/a2a-types" }
serde_json = "1"

# Prevent this from interfering with the workspace
[workspace]
members = ["."]

[[bin]]
name = "json_deser"
path = "fuzz_targets/json_deser.rs"
doc = false
