# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F.

[package]
name        = "a2a-client"
version     = "0.1.0"
description = "A2A protocol v1.0 — HTTP client (hyper-backed)"
readme      = "../../README.md"

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation          = "https://docs.rs/a2a-client"
keywords               = ["a2a", "agent", "client", "http"]
categories             = ["network-programming", "web-programming"]

[features]
## Enable HTTPS support via rustls (no OpenSSL system dependency).
tls-rustls = []
## Enable agent card signing verification.
signing = ["a2a-types/signing"]

[dependencies]
a2a-types      = { version = "0.1.0", path = "../a2a-types" }
serde_json     = { workspace = true }
hyper          = { workspace = true }
http-body-util = { workspace = true }
hyper-util     = { workspace = true }
tokio          = { workspace = true }
uuid           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
criterion = { workspace = true }

[[bench]]
name = "sse_parse"
harness = false
