# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F.

[package]
name        = "a2a-sdk"
version     = "0.1.0"
description = "A2A protocol v1.0 — convenience umbrella re-export crate"
readme      = "../../README.md"

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation          = "https://docs.rs/a2a-sdk"
keywords               = ["a2a", "agent", "sdk"]
categories             = ["network-programming", "web-programming", "api-bindings"]

[features]
## Enable agent card signing.
signing = ["a2a-types/signing", "a2a-server/signing", "a2a-client/signing"]
## Enable structured logging via the `tracing` crate.
tracing = ["a2a-client/tracing", "a2a-server/tracing"]
## Enable HTTPS support via rustls.
tls-rustls = ["a2a-client/tls-rustls"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
a2a-types  = { version = "0.1.0", path = "../a2a-types" }
a2a-client = { version = "0.1.0", path = "../a2a-client" }
a2a-server = { version = "0.1.0", path = "../a2a-server" }
