# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F.

[package]
name        = "a2a-protocol-sdk"
version     = "0.2.0"
description = "A2A protocol v1.0 — convenience umbrella re-export crate"
readme      = "../../README.md"

edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
homepage.workspace     = true
documentation          = "https://docs.rs/a2a-protocol-sdk"
keywords               = ["a2a", "agent", "sdk"]
categories             = ["network-programming", "web-programming", "api-bindings"]

[features]
## Enable agent card signing.
signing = ["a2a-protocol-types/signing", "a2a-protocol-server/signing", "a2a-protocol-client/signing"]
## Enable structured logging via the `tracing` crate.
tracing = ["a2a-protocol-client/tracing", "a2a-protocol-server/tracing"]
## Enable HTTPS support via rustls.
tls-rustls = ["a2a-protocol-client/tls-rustls"]
## Enable gRPC transport via tonic.
grpc = ["a2a-protocol-client/grpc", "a2a-protocol-server/grpc"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
a2a-protocol-types  = { version = "0.2.0", path = "../a2a-types" }
a2a-protocol-client = { version = "0.2.0", path = "../a2a-client" }
a2a-protocol-server = { version = "0.2.0", path = "../a2a-server" }
