# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F.

[package]
name        = "echo-agent"
version     = "0.0.0"
description = "End-to-end A2A echo agent example"
publish     = false

edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[dependencies]
a2a-types  = { path = "../../crates/a2a-types" }
a2a-client = { path = "../../crates/a2a-client" }
a2a-server = { path = "../../crates/a2a-server" }

serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
hyper          = { workspace = true }
hyper-util     = { workspace = true, features = ["server", "server-auto"] }
http-body-util = { workspace = true }
bytes          = "1"
uuid           = { workspace = true }
