# SPDX-License-Identifier: Apache-2.0
# Copyright 2026 Tom F. <tomf@tomtomtech.net> (https://github.com/tomtom215)

[package]
name        = "genai-a2a-agent"
version     = "0.0.0"
description = "Example: wrapping a genai LLM client behind the A2A protocol"
publish     = false

edition.workspace    = true
rust-version.workspace = true
license.workspace    = true

[dependencies]
a2a-protocol-types  = { path = "../../crates/a2a-types" }
a2a-protocol-server = { path = "../../crates/a2a-server" }

serde_json     = { workspace = true }
tokio          = { workspace = true, features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
hyper          = { workspace = true }
hyper-util     = { workspace = true, features = ["server", "server-auto"] }
http-body-util = { workspace = true }
uuid           = { workspace = true }

# genai — multi-provider LLM client (https://crates.io/crates/genai)
genai = "0.1"
